delete some forms

--- a/newHome.html
+++ b/newHome.html
@@ -74,11 +74,10 @@
 		<form>
 			<div class="row">
 				<div class="large-6 columns">
-					<input type="text" placeholder="Your First Name" name="firstname" />
-					<input type="text" placeholder="Your Last Name" name="lastname" />
+					<input type="text" placeholder="Your Full Name" name="firstname" />
 					<input type="text" placeholder="Your Email" name="email"/>
 					<input type="file" name="myfiles" multiple="multiple" placeholder="Upload Images" class="select_files">
-					<input type="text" placeholder="1+2=?" name="question"/>
+					
 				</div>
 				<div class="large-6 columns">
 					<input type="text" placeholder="Product Name Brand/Model" name="productname"/>
