--- a/newHome.html
+++ b/newHome.html
@@ -74,7 +74,7 @@
 	<section id="contact_form">
 		<div class="row">
 			<div class="large-10 large-centered columns submit_copy">
-				<p class="text-center">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.  </p>
+				<p class="text-center">Enter the information for the product you want to sell below  </p>
 			</div>
 		</div>
 		<form>
@@ -102,6 +102,37 @@
 
 	</section>
 
+   <section id="customers">
+                <div class="max_width_wrapper">
+                        <h1> What our customers are saying. </h1>
+                        <ul id="quotes">
+                                <li class="first">
+                                        <div class="quote_wrapper">
+                                                <p> I got $400 for my computer and $220 for my old phone. I was amazed </p>
+                                                <div class="arrow-down"></div>
+                                        </div>
+                                        <div class="circular_wrapper first_wrap"></div>
+                                        <h3> Gidon C. </h3>
+                                </li>
+                                <li>
+                                        <div class="quote_wrapper">
+                                                <p>I had tons of stuff lying around that I did not have time to throw out or sell online, so picSell was a no brainer.</p>
+                                                <div class="arrow-down"></div>
+                                        </div>
+                                        <div class="circular_wrapper second_wrap"></div>
+                                        <h3> Anne Sachs </h3>
+                                </li>
+                                <li>
+                                        <div class="quote_wrapper">
+                                                <p> After renovating our kitchen, I was left with an expensive faucet I could not return. I emailed picSell and after 10 days it sold for $700.</p>
+                                                <div class="arrow-down"></div>
+                                        </div>
+                                        <div class="circular_wrapper third_wrap"></div>
+                                        <h3> Avi C.</h3>
+                                </li>                                                                
+                        </ul>
+                </div>
+        </section>
 	 
   <footer class="flap">
     <div class="max_width_wrapper">
