--- a/newHome.html
+++ b/newHome.html
@@ -74,7 +74,7 @@
 	<section id="contact_form">
 		<div class="row">
 			<div class="large-10 large-centered columns submit_copy">
-				<p class="text-center">Enter the information for the product you want to sell below  </p>
+				<h2 class="text-center">Enter the information for the product you want to sell below  </h2>
 			</div>
 		</div>
 		<form>
