--- a/newHome.html
+++ b/newHome.html
@@ -45,7 +45,6 @@
         <li class="go_to"> <a href="index.html"> HOME </a> </li>
       </ul>
     </nav>
-  </div>
 </header>
 <body id="index" class="home">
   <div id="dropdown_menu">
@@ -60,9 +59,16 @@
       </ul>
     </nav>    
   </div>
-  <div class="row main_banner top_space full_width">
+  <div class="row contact_banner top_space full_width">
   <div class="large-12 columns">
-    <h1 class="text-center">Submit Items</h1>
+    <div class="row">
+        <div class="large-6 columns home_top">
+          <h1>Sell your stuff in a snap</h1>
+          <p>
+        </div>
+        <div class="large-columns home_desc">
+        </div>
+    </div>
   </div>
 </div>
 	<section id="contact_form">
