Timey Wimey Stuff

--- a/newHome.html
+++ b/newHome.html
@@ -3,6 +3,8 @@
 <head>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script src="app.js"></script>
+  <script type="text/javascript" src="//use.typekit.net/veg4hgx.js"></script>
+  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 	<link rel="stylesheet" href="main.css" type="text/css" />
 	<link rel="stylesheet" href="css/foundation.css">
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -60,13 +62,16 @@
     </nav>    
   </div>
   <div class="row contact_banner top_space full_width">
-  <div class="large-12 columns">
+  <div class="large-10 columns large-centered">
     <div class="row">
-        <div class="large-6 columns home_top">
-          <h1>Sell your stuff in a snap</h1>
-          <p>
+        <div class="large-5 columns home_top">
+          <h1 class="tk-museo-sans">Sell your stuff in a snap</h1>
+          <p>Send us three pics of the item you want to see - we'll handle the rest</p>
         </div>
-        <div class="large-columns home_desc">
+        <div class="large-6 columns large-offset-1 home_desc">
+          <i class="fi-check left"></i><p>Enter your item info below</p>
+          <i class="fi-check left"></i><p>We'll offer you a price</p>
+          <i class="fi-check left"></i><p>When the item sells, we send you the shipping label. Send the item out and get paid</p>
         </div>
     </div>
   </div>
