Like a Dalek in Heat - Set up the banner

--- a/newHome.html
+++ b/newHome.html
@@ -68,10 +68,10 @@
           <h1 class="tk-museo-sans">Sell your stuff in a snap</h1>
           <p>Send us three pics of the item you want to see - we'll handle the rest</p>
         </div>
-        <div class="large-6 columns large-offset-1 home_desc">
-          <i class="fi-check left"></i><p>Enter your item info below</p>
-          <i class="fi-check left"></i><p>We'll offer you a price</p>
-          <i class="fi-check left"></i><p>When the item sells, we send you the shipping label. Send the item out and get paid</p>
+        <div class="large-5 columns large-offset-2 home_desc">
+          <div class="desc_row"><div class="left stepbox_1"></div><p class="tk-museo-sans">Enter your item info below</p></div>
+          <div class="desc_row"><div class="left stepbox_2"></div><p class="tk-museo-sans">We'll offer you a price</p></div>
+          <div class="desc_row"><div class="left stepbox_3"></div><p class="tk-museo-sans">When the item sells, we send you the shipping label. Send the item out and get paid</p></div>
         </div>
     </div>
   </div>
