--- a/newHome.html
+++ b/newHome.html
@@ -74,6 +74,12 @@
           <div class="desc_row"><div class="left stepbox_3"></div><p class="tk-museo-sans">When the item sells, we send you the shipping label. Send the item out and get paid</p></div>
         </div>
     </div>
+    <div class="row homebanner_bottom">
+      <div class="large-6 columns large-centered text-center">
+          <span>What are you waiting for?<span><br />
+            <img src="images/backArrow.png" class="center">
+      </div>
+    </div>
   </div>
 </div>
 	<section id="contact_form">
