--- a/newHome.html
+++ b/newHome.html
@@ -76,7 +76,7 @@
     </div>
     <div class="row homebanner_bottom">
       <div class="large-6 columns large-centered text-center">
-          <span>What are you waiting for?<span><br />
+          <span>What are you waiting for?</span><br />
             <img src="images/backArrow.png" class="center">
       </div>
     </div>
