--- a/about_us.html
+++ b/about_us.html
@@ -101,12 +101,20 @@
 </section>
 
 <section class="about_divide">
-
+    <div id="our_story">
+      <div class="triangle"></div>
+    </div>
+    <div class="row">
+      <div class=" large-12 columns large-centered story">
+          <h1 class="text-center">Our Story</h1>
+          <p class="text-left">It all started with coffee. A good friend upgraded his espresso machine. I had just sold my old iPhone and suggested he sell his used espresso machine. He said he couldn’t be bothered so I sold it for him. $1000 richer, he gave me his old iPhone, camera and watch to sell. All sold within 3 days. A new business was born.</p>
+      </div>
+    </div>
 </section>
-<div id="customers">
-<div class="triangle"></div>
-</div>
-<section class="content_area about_3">
+<section class="content_area about_3 flap">
+   <!-- <div id="our_story_1">
+      <div class="triangle"></div>
+    </div>-->
       <div class="row">
           <div class="large-6 columns sec_1">
             <h1>Why use picSell?</h1>
