--- a/submit.html
+++ b/submit.html
@@ -65,7 +65,7 @@
     <h1 class="text-center">Submit Items</h1>
   </div>
 </div>
-	<section id="contact_form">
+	<section id="contact_form" class="content_area flap">
 		<div class="row">
 			<div class="large-10 large-centered columns submit_copy">
 				<p class="text-center">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.  </p>
