--- a/terms_and_conditions.html
+++ b/terms_and_conditions.html
@@ -81,8 +81,8 @@
 
 <p>You may not submit any User Content that (i) is inaccurate, false or misleading, (ii) is defamatory, obscene, pornographic, discriminatory, abusive, or threatening, (iii) advocates or encourages violence, hatred, discrimination or unlawful conduct, (iv) violates any applicable federal, state, local or foreign law, (v) infringes upon or otherwise violates any intellectual property right, proprietary right, or right of publicity or privacy, or (vi) knowingly or recklessly contains viruses, spyware, adware or any other harmful or malicious code or other technology.</p>
 
-<h2>Item Acceptance/Rejection Criteria</h2>
-</p>Before we attempt to sell your item through the Service, we will review the User Content you have provided regarding the item and insure that it complies with the Terms of Use and all laws. We will reject items that we are able to determine cannot legally be sold in the United States or have a high probability of causing illegal, inappropriate or fraudulent behavior by the buyer or the seller.</p>
+<h2 class="text-left">Item Acceptance/Rejection Criteria</h2>
+<p>Before we attempt to sell your item through the Service, we will review the User Content you have provided regarding the item and insure that it complies with the Terms of Use and all laws. We will reject items that we are able to determine cannot legally be sold in the United States or have a high probability of causing illegal, inappropriate or fraudulent behavior by the buyer or the seller.</p>
 
 <h2>The following items may not be sold through the Service:</h2>
 <ul class="circle">
