New pages added

--- a/recent_sold.html
+++ b/recent_sold.html
@@ -78,87 +78,87 @@
     <div class="large-12 columns large-centered">
        <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3">
           <li class='item_feature first'>
-            <img src="images/h1.jpg" />
+            <img src="images/gallery/D80.jpg" />
             <div class="sales_desc">
-            <h3>Apple Airport Express</h3>
-            <p>Sold on picSell: $72</p>
+            <h3>Nikon D80 Digital SLR</h3>
+            <p>Sold on picSell: $359</p>
             </div>
           </li>
           <li class='item_feature'>
-            <img src="images/h2.jpg" />
+            <img src="images/gallery/consumer_behavior.jpg" />
             <div class="sales_desc">
-            <h3>ERGObaby Original Baby</h3>
-            <p>Sold on picSell: $85</p>
+            <h3>Consumer Behavior (Hardcover)</h3>
+            <p>Sold on picSell: $124</p>
             </div>
           </li>
           <li class='item_feature'>
-            <img src="images/h3.jpg" />
+            <img src="images/gallery/iphone_broken.jpg" />
             <div class="sales_desc">
-            <h3>Bolex Paillard H16 REX 3</h3>
-            <p>Sold on picSell: $1299</p>
+            <h3>iPhone 4S 32gb Broken</h3>
+            <p>Sold on picSell: $244</p>
             </div>
           </li>
           <li class='item_feature first'>
-            <img src="images/h1.jpg" />
+            <img src="images/gallery/GroheFaucet.jpg" />
             <div class="sales_desc">
-            <h3>Apple Airport Express</h3>
-            <p>Sold on picSell: $72</p>
+            <h3>Grohe Faucet 32951DC0 K7 Semi-Pro Kitchen SuperSteel</h3>
+            <p>Sold on picSell: $700</p>
             </div>
           </li>
           <li class='item_feature'>
-            <img src="images/h2.jpg" />
+            <img src="images/gallery/ergo_red.jpg" />
             <div class="sales_desc">
             <h3>ERGObaby Original Baby</h3>
-            <p>Sold on picSell: $85</p>
+            <p>Sold on picSell: $97</p>
             </div>
           </li>
           <li class='item_feature'>
-            <img src="images/h3.jpg" />
+            <img src="images/gallery/Viking.jpg" />
             <div class="sales_desc">
-            <h3>Bolex Paillard H16 REX 3</h3>
-            <p>Sold on picSell: $1299</p>
+            <h3>Viking Professional Series Vwh36481ss hood</h3>
+            <p>Sold on picSell: $1400</p>
             </div>
           </li>
           <li class='item_feature first'>
-            <img src="images/h1.jpg" />
+            <img src="images/gallery/samsung-galaxy-gear.jpg" />
             <div class="sales_desc">
-            <h3>Apple Airport Express</h3>
-            <p>Sold on picSell: $72</p>
+            <h3>Samsung Galaxy Gear Smartwatch</h3>
+            <p>Sold on picSell: $214</p>
             </div>
           </li>
           <li class='item_feature'>
-            <img src="images/h2.jpg" />
+            <img src="images/gallery/ipad2_broken.png" />
             <div class="sales_desc">
-            <h3>ERGObaby Original Baby</h3>
-            <p>Sold on picSell: $85</p>
+            <h3>iPad 2 16GB wifi broken</h3>
+            <p>Sold on picSell: $145</p>
             </div>
           </li>
           <li class='item_feature'>
-            <img src="images/h3.jpg" />
+            <img src="images/gallery/iphone4s.png" />
             <div class="sales_desc">
-            <h3>Bolex Paillard H16 REX 3</h3>
-            <p>Sold on picSell: $1299</p>
+            <h3>iphone 4S 16GB unlocked </h3>
+            <p>Sold on picSell: $299</p>
             </div>
           </li>
           <li class='item_feature first'>
-            <img src="images/h1.jpg" />
+            <img src="images/gallery/Hansgrohe2.jpg" />
             <div class="sales_desc">
-            <h3>Apple Airport Express</h3>
-            <p>Sold on picSell: $72</p>
+            <h3>Hansgrohe 04247800 Talis S SemiArc Kitchen Faucet, Steel Optik</h3>
+            <p>Sold on picSell: $208</p>
             </div>
           </li>
           <li class='item_feature'>
-            <img src="images/h2.jpg" />
+            <img src="images/gallery/logitech.jpg" />
             <div class="sales_desc">
-            <h3>ERGObaby Original Baby</h3>
-            <p>Sold on picSell: $85</p>
+            <h3>ELogitech Harmony 1100 Universal Remote</h3>
+            <p>Sold on picSell: $174</p>
             </div>
           </li>
           <li class='item_feature'>
-            <img src="images/h3.jpg" />
+            <img src="images/gallery/capresso.jpg" />
             <div class="sales_desc">
-            <h3>Bolex Paillard H16 REX 3</h3>
-            <p>Sold on picSell: $1299</p>
+            <h3>Jura-Capresso Impressa</h3>
+            <p>Sold on picSell: $1150</p>
             </div>
           </li>
         </ul>
