Guidelines page added, gallery edited

--- a/recent_sold.html
+++ b/recent_sold.html
@@ -101,7 +101,7 @@
           <li class='item_feature first'>
             <img src="images/gallery/GroheFaucet.jpg" />
             <div class="sales_desc">
-            <h3>Grohe Faucet 32951DC0 K7 Semi-Pro Kitchen SuperSteel</h3>
+            <h3>Grohe Faucet SuperSteel</h3>
             <p>Sold on picSell: $700</p>
             </div>
           </li>
@@ -115,7 +115,7 @@
           <li class='item_feature'>
             <img src="images/gallery/Viking.jpg" />
             <div class="sales_desc">
-            <h3>Viking Professional Series Vwh36481ss hood</h3>
+            <h3>Viking hood</h3>
             <p>Sold on picSell: $1400</p>
             </div>
           </li>
@@ -143,14 +143,14 @@
           <li class='item_feature first'>
             <img src="images/gallery/Hansgrohe2.jpg" />
             <div class="sales_desc">
-            <h3>Hansgrohe 04247800 Talis S SemiArc Kitchen Faucet, Steel Optik</h3>
+            <h3>Hansgrohe S SemiArc Kitchen Faucet</h3>
             <p>Sold on picSell: $208</p>
             </div>
           </li>
           <li class='item_feature'>
             <img src="images/gallery/logitech.jpg" />
             <div class="sales_desc">
-            <h3>ELogitech Harmony 1100 Universal Remote</h3>
+            <h3>Logitech Harmony 1100 Remote</h3>
             <p>Sold on picSell: $174</p>
             </div>
           </li>
