--- a/guidelines.html
+++ b/guidelines.html
@@ -118,7 +118,7 @@
     <h3>Normal-Shaped Items</h3>
         <div class="row">
           <div class="large-6 columns">
-              <i class="fi-social-dropbox icon_box"></i>
+              <i class="fi-trash icon_box"></i>
               <div class="top_box">
               <h4>Packaging</h4>
               <p>Various materials can be used for cushioning and protection:</p>
